style:remove scrollbar buttons fixes #1316
(integrated from master branch change 254a7a8 by Carey Hoffman <cgchoffman@gmail.com>)

--- a/src/chrome/komodo/skin/global/_scrollbars.less
+++ b/src/chrome/komodo/skin/global/_scrollbars.less
@@ -44,6 +44,11 @@ scrollbar
         background: @contrast;
         border: 0;
     }
+    
+    scrollbarbutton
+    {
+        display: none;
+    }
 }
 
 /* Modals */
